--- a/Lab04.vcxproj
+++ b/Lab04.vcxproj
@@ -102,7 +102,10 @@
     <ClCompile Include="chess.cpp" />
     <ClCompile Include="move.cpp" />
     <ClCompile Include="piece.cpp" />
+    <ClCompile Include="pieceBishop.h" />
+    <ClCompile Include="pieceKing.h" />
     <ClCompile Include="pieceKnight.cpp" />
+    <ClCompile Include="piecePawn.h" />
     <ClCompile Include="position.cpp" />
     <ClCompile Include="test.cpp" />
     <ClCompile Include="testBoard.cpp" />
@@ -118,6 +121,8 @@
     <ClInclude Include="move.h" />
     <ClInclude Include="piece.h" />
     <ClInclude Include="pieceKnight.h" />
+    <ClInclude Include="pieceQueen.h" />
+    <ClInclude Include="pieceRook.h" />
     <ClInclude Include="pieceSpace.h" />
     <ClInclude Include="pieceType.h" />
     <ClInclude Include="test.h" />
