--- a/Lab04.vcxproj.filters
+++ b/Lab04.vcxproj.filters
@@ -57,6 +57,15 @@
     <ClCompile Include="pieceKnight.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="piecePawn.h">
+      <Filter>Header Files</Filter>
+    </ClCompile>
+    <ClCompile Include="pieceKing.h">
+      <Filter>Header Files</Filter>
+    </ClCompile>
+    <ClCompile Include="pieceBishop.h">
+      <Filter>Header Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="move.h">
@@ -108,6 +117,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="testSpace.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="pieceRook.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="pieceQueen.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
