--- a/Lab04.vcxproj.filters
+++ b/Lab04.vcxproj.filters
@@ -57,15 +57,6 @@
     <ClCompile Include="pieceKnight.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="piecePawn.h">
-      <Filter>Header Files</Filter>
-    </ClCompile>
-    <ClCompile Include="pieceKing.h">
-      <Filter>Header Files</Filter>
-    </ClCompile>
-    <ClCompile Include="pieceBishop.h">
-      <Filter>Header Files</Filter>
-    </ClCompile>
     <ClCompile Include="piecePawn.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -79,6 +70,21 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="pieceQueen.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="testBishop.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="testKing.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="testPawn.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="testQueen.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="testRook.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -138,6 +144,30 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="pieceQueen.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="pieceKing.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="piecePawn.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="pieceBishop.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="testBishop.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="testKing.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="testPawn.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="testQueen.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="testRook.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
